test_inputs/bad/invalid_ident.lat
int _asd() {
    return 0;
}

int main() {
    _asd();
    return 0;    
}
